# LauAcademy

./: .env  README.md  test.txt
LauAcademy/: .env  .gitignore  credentials.json  pyproject.toml
LauAcademy/lauacademy/back/: __init__.py  backend_main.py  compiler.py  dalleai.py  eleven_tts.py  google-tts.py  queries.py  text_to_image.py  video_gen.py
LauAcademy/lauacademy/back/text-to-speech/: credentials.json  eleven-tts.py  google-tts.py
LauAcademy/lauacademy/front/: Homepage.py  home.py
LauAcademy/lauacademy/front/pages/: Enter_Your_Information.py  Flashcards.py  See_The_Result.py
LauAcademy/lauacademy/front/pages/data_class/: SharedData.py
LauAcademy/lauacademy/text-to-speech/: google-tts.py
