[tool.poetry]
name = "lauacademy"
version = "0.1.0"
description = ""
authors = ["TeachMeTW <teachmetheways652@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.23.1"
pydantic = "^1.10.9"
bs4 = "^0.0.1"
elevenlab = "^0.0.1"
elevenlabs = "^0.2.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
